# solana-fellowship

./: .gitmodules
week1/quests/create-your-personal-cryptocurrency-using-solana-cli/: README.md
week1/quests/deploying-the-program-on-to-solana/: Cargo.toml  README.md
week2/exercise/voting-contract/: Anchor.toml
week2/quests/create-an-airdrop-program-with-solana-web3.js/: README.md  airdrop.ts  index.ts  package-lock.json  package.json
week2/quests/roulette-game-in-solana/: index.ts  package-lock.json  package.json
week3/exercise/bi-directional-payment-channel/: Anchor.toml
week3/exercise/bi-directional-payment-channel/programs/bi-directional-payment-channel/: Cargo.toml
week3/exercise/bi-directional-payment-channel/programs/bi-directional-payment-channel/src/: lib.rs
week3/quests/crowdfund-app/: README.md  index.ts  package-lock.json  package.json
week3/quests/crowdfund-contract/: Cargo.toml  README.md
week3/quests/crowdfund-contract/src/: lib.rs
week3/quests/solana-calculator/: Anchor.toml  README.md  package.json
week4/exercise/marketplace/: README.md  index.ts  package.json
week4/quests/candy-machine/: README.md
week4/quests/create-burn-nft/: package.json
week5/exercise/stake/: Anchor.toml
week5/quests/create-crypto-js/: package-lock.json  package.json
week5/quests/create-crypto-rust/: Anchor.toml  package.json
week6/quests/decentralized-identity-verification/programs/decentralized-identity-verification/: Cargo.toml
week6/quests/decentralized-identity-verification/programs/decentralized-identity-verification/src/: lib.rs
(+109 files in other folders)
